# Changelog

# v2.0.0
- Implement React.js components.

# v1.2.2
- Change the inactive navigation item to black, to improve accessibility (color contrast).
- Add google analytics to homepage and pictologo privacy policy page.

# v1.2.1
- Improve layout of the games page by making it more responsive.

# v1.2.0
- Add Pictologo privacy policy page.
- Add old assets files.

# v1.1.0
- Update homepage to have navigation.
- Add /free-games page.

# v1.0.2
- Fix build that gets published to Firebase.

# v1.0.1
- Update BTW number.

# v1.0.0
- Basic version of my static website.