@@ -1,13 +1,9 @@
-import React from "react";
+import React from 'react';
 
 export default () => (
-  <footer class="container">
+  <footer class='container'>
     <p>
-      <abbr title="Zelfstandige Zonder Personeel" lang="nl-nl">ZZP</abbr>&nbsp;Thomas Amar&nbsp;&bull;&nbsp;
-      <abbr title="Kamer van Koophandel" lang="nl-nl">KvK</abbr>&nbsp;
-      <span title="Amsterdam Chamber of Commerce registration number">74269100</span>&nbsp;&bull;&nbsp;
-      <abbr title="Belasting over de Toegevoegde Waarde" lang="nl-nl">BTW</abbr>&nbsp;
-      <span title="Value Added Tax (VAT) number">NL784074070B02</span>
+      <abbr title='Zelfstandige Zonder Personeel' lang='nl-nl'>ZZP</abbr> Thomas Amar &bull; <abbr title='Kamer van Koophandel' lang='nl-nl'>KvK</abbr> <span title='Amsterdam Chamber of Commerce registration number'>74269100</span> &bull; <abbr title='Belasting over de Toegevoegde Waarde' lang='nl-nl'>BTW</abbr> <span title='Value Added Tax (VAT) number'>NL784074070B02</span>
     </p>
   </footer>
 );
