@@ -1,7 +1,10 @@
 # Changelog
 
 # v2.0.0
-- Implement React.js components.
+- Implement React.js components for the homepage.
+- Setup routing to show different pages.
+- Implement React.js components for the games page.
+- Implement React.js components for the Pictologo privacy policy page.
 
 # v1.2.2
 - Change the inactive navigation item to black, to improve accessibility (color contrast).
